# ChangeLog for net-analyzer/ipcad
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ipcad/ChangeLog,v 1.35 2012/01/06 16:54:53 ranger Exp $

  06 Jan 2012; Brent Baude <ranger@gentoo.org> ipcad-3.7.3.ebuild:
  Marking ipcad-3.7.3 ppc for bug 385355

  04 Oct 2011; Tony Vroon <chainsaw@gentoo.org> ipcad-3.7.3.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #385355.

  04 Oct 2011; Andreas Schuerch <nativemad@gentoo.org> ipcad-3.7.3.ebuild:
  x86 stable, see bug 385355

*ipcad-3.7.3 (31 Mar 2011)

  31 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> +ipcad-3.7.3.ebuild,
  +files/ipcad-3.7.3-signal_h.patch:
  Version bump. Fix building with recent linux-headers wrt #360875 by including
  signal.h where it's used.

  20 Jan 2011; Peter Volkov <pva@gentoo.org> ipcad-3.7.ebuild,
  +files/ipcad-3.7-linux-2.6.35.patch:
  Fix build issue with >=linux-headers-2.6.35, bug #335592, thank Diego Elio
  Pettenò for report. Updated EAPI.

  26 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org> ipcad-3.7.ebuild,
  -files/ipcad-3.7-20060828-cvs.patch:
  Move big patch to mirrors.

  15 Nov 2008; Peter Volkov <pva@gentoo.org>
  +files/ipcad-3.7-linux-2.6.27.patch, ipcad-3.7.ebuild:
  amd64 stable. Fixed build issue with >=linux-headers-2.6.27.

  24 Apr 2007; Peter Weller <welp@gentoo.org> ipcad-3.7.ebuild:
  Keyworded ~amd64 wrt bug 175728

  22 Apr 2007; <pva@gentoo.org> -ipcad-3.6.6.ebuild:
  Cleaning old ebuild. This fixes bug #174266.

  04 Oct 2006; Peter Volkov <pva@gentoo.org> ipcad-3.7.ebuild:
  dodir -> keepdir for /var/ipcad/run/ to avoid directory removal on reemerge.

  04 Sep 2006; Joshua Jackson <tsunam@gentoo.org> ipcad-3.7.ebuild:
  Stable x86; bug #145483

  01 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> ipcad-3.7.ebuild:
  ppc stable, bug #145483

  29 Aug 2006; Peter Volkov <pva@gentoo.org>