@@ -1,12 +1,19 @@
-AUX ipcad-3.7-linux-2.6.27.patch 521 RMD160 4a993f65332b7e078ac60538efec480a38e863a6 SHA1 456bede04a339c140fb2fe474583f2c4bc09468a SHA256 a1606dba9b31385751101add747b23e1efa49e16b753e449730b68b2d81f2d67
-AUX ipcad-3.7-linux-2.6.35.patch 1267 RMD160 dd3ab0d1e2d7d06d7eaf73ef6f9e10108e82adee SHA1 fac728e285f5f646547507cbc10a35820cf2daa7 SHA256 15266ab846c0cc5786811eb47e4d57b521fcf7ee9b7ec620af3eb06db6d57930
-AUX ipcad-3.7.3-signal_h.patch 675 RMD160 ae59e6de2b9c8fa61414722344a9e9b72349a23f SHA1 71a7a28c67c2bd56aeda7252307c152dce795337 SHA256 029f93fccee07f9ee1fb504b49fc837543d382254d1c50113790e7321681c8d5
-AUX ipcad.conf.d 429 RMD160 02956a6386a7448501658705a95dcb7d97f7531b SHA1 9be3112424e3d1e49b6c626f5c035128496b8668 SHA256 7b802d54f968ab3797e49934b78ace247274326559bfece2792c2490a7f0339c
-AUX ipcad.init 924 RMD160 e75dd67de1aff64b5979415942f3afc96909ffee SHA1 dbde21c675f216f9eed9b3c8752e8e7dfb0c9473 SHA256 9b6234267f23b50a4959444f90fe318d26d0559121804a100017e17406ffbe93
-DIST ipcad-3.7-20060828-cvs.patch.bz2 5999 RMD160 aa82bc0d72405393a71530ac63fb9fd42042da15 SHA1 5c15f76d71814c8984a80e78894d19a37152fd99 SHA256 3c168686fb9262a937225f2f37a9b994ea2f7c87a580ceb79475af7f4711ca17
-DIST ipcad-3.7.3.tar.gz 172457 RMD160 eec27dee7f0ca69b855e1e2a422afbf156fc685d SHA1 7b888b64eaf28cbbc375173cd08c7f66ddc63fb4 SHA256 72372d46ae35e4d7cc74d96fbaf8bb0ae189aa9ecfd89026487aca790c2f0716
-DIST ipcad-3.7.tar.gz 171814 RMD160 788f4b55bd7494bf7ea99a157a4efdcb4cdba71c SHA1 ef67a5313f672eb4cb7e9c2762d99d1e9d34fbc2 SHA256 3be5edebd7e8ce3a050c10f59b0c58619cae23f28d2c3daa38384dca01795352
-EBUILD ipcad-3.7.3.ebuild 1294 RMD160 6f3c37c035dcf904da23b546313263813cff5b91 SHA1 a18a3b7a20349be3ee1fc1c76f8739b7c588af31 SHA256 09a81d30edc1b1d3334e2fa0026792c498eee5fa0761eb41d22f53c603814e3a
-EBUILD ipcad-3.7.ebuild 1307 RMD160 e860ec308b81bf31c3037cf525b8644e67a9039b SHA1 63f1990b63277aade9e9ac68a31228decb71084b SHA256 9f8bd1733c163a3a4b5d695283b97d55f193d38bb8e688994996f2d5da42b775
-MISC ChangeLog 5362 RMD160 f43afc869f189ac5a783feca7e7b5fd52b57908e SHA1 d310ae83894e22a6281db933e86eb41529411693 SHA256 465de7b50092c6e28f7356838645d369f5874d0fd38bc7badde101101e5c667c
-MISC metadata.xml 221 RMD160 9bf9934cf7def883af53fd96eb920842aeb5f10e SHA1 31d376e84b2e0b9793e1555038bb438a9167cc1a SHA256 26daf450814a6f339001173abdb07aa9c0bfae6a5432db67bf6a73c19c9fdd5e
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX ipcad-3.7-linux-2.6.27.patch 521 SHA256 a1606dba9b31385751101add747b23e1efa49e16b753e449730b68b2d81f2d67 SHA512 5b440b4983f1ddb44082bd730b88e69cf0c4b79d2ecb0503ed198274c564e45d9d04e01df70a2568460a1ffbd50c30b071812779124cd6b2cceadd59c57d19cb WHIRLPOOL 55415c2842755ee526a0cce84b581c11092fb45501eb6231f8ad80d97caf85a3c5cb1c9228bfd91a7a9d7e653512a39e788fed93bae2ed9abd162c77b71a2c3e
+AUX ipcad-3.7-linux-2.6.35.patch 1267 SHA256 15266ab846c0cc5786811eb47e4d57b521fcf7ee9b7ec620af3eb06db6d57930 SHA512 5dd6829d16ab6cd3dc54f08fb6e166cc352253c9bba36abca03420f00fa47c423ffef58b200a56a86daa812d0572250fb454d549e0ee06ca7ecba7043953446a WHIRLPOOL ac6a46e554976a0ec5ca0ae278c2af78801bded9ccdaf47ce043a4b3c39d3e49ed48b15e225e11850c879feb2d594b8c7bb66f95db3744000b696ed53800604f
+AUX ipcad-3.7.3-signal_h.patch 675 SHA256 029f93fccee07f9ee1fb504b49fc837543d382254d1c50113790e7321681c8d5 SHA512 f40c5fc8406f1d33b210fa6e44d92b1ac2be6143777ce36e4f33d20e6b9eb330d85492d373bfb45d378fee7b3449c0b7f7a3c7ec0e5c94598ba1addce43c7a20 WHIRLPOOL 4ebf13e618f45a7324b9a4d7bafd60ed7ec92602cfa80449eba9e151c1ece53b43f19edf29bc0372b103d5a43363049c757c2a4bef1027e0fe903a6b08f7196d
+AUX ipcad.conf.d 429 SHA256 7b802d54f968ab3797e49934b78ace247274326559bfece2792c2490a7f0339c SHA512 1c632e5b8f0a323a6373d40ca7d5f91e3c56edeefe34be811fa29088f98c7a0df11395d4eb8071d4e673102ed5ed56222af8887d9e821a4d34d16f6efa7088ce WHIRLPOOL 8f0420ed4306acb2187c6dc981de9f94954f946b829b705ad2f04f21c6762a7beef264f9dc602a9f0062ecfbbb11c49338919d770b7cd9a97d7a6dd27c055012
+AUX ipcad.init 924 SHA256 9b6234267f23b50a4959444f90fe318d26d0559121804a100017e17406ffbe93 SHA512 e1bb388d2eaccf72cf8ea9ab6ced0bcd9d63c5269036ba1ea1d0ba67769e816956793bbf554ccdbe450c1081a24cdf4e030479b94b798286aae6947d7e66437d WHIRLPOOL afa2d2222efa76092c72e095f60c762d11f8f20fa03e44c45e23dd9fa972b8caaaff1aa183098e273f5f5c527300c79b526added05a4eb1c02d800a13993e7a6
+DIST ipcad-3.7.3.tar.gz 172457 SHA256 72372d46ae35e4d7cc74d96fbaf8bb0ae189aa9ecfd89026487aca790c2f0716
+EBUILD ipcad-3.7.3.ebuild 1297 SHA256 be3d42e94bff0c7b9df67cfa53102972ddaa9fc6fab2af401de0603cb36e40e5 SHA512 d16d61feeecbd41de02a0ce59cbca3f5ec4725fd84e8f0eaf0c3b15147307d9091d75ed4699c6ce429fa9fb81dc3d3b286f3957f5b3d655747d0f392748c1f8f WHIRLPOOL 5efb53b6faa6bd6f9efc7ba4cbd3367383825699486801d416017eae249d47c02e8d7b8b87118f82cbd9031e2e8b893330e296b368b15a24fb65fa48b28c6609
+MISC ChangeLog 5486 SHA256 74b2574c4351db5452bf647678327a87be9b17c3dbd374a190b4ee6e7c68e9d7 SHA512 5b47f10363ff5d21eb1bab4ba36255919a03f37a3702067fb4cec2844ab400b20c0aced3311668ceffdd77f4794a61c13851da3e22bcccd8f6c973d203aadc3e WHIRLPOOL 28b726332e4c2ffaaf120c749b7c2f6c99104f412ddb810c38f103636c654ef903b897fb863a8fc412e8d3490e143da181d99e19d769a317bc35971fb0821f58
+MISC metadata.xml 221 SHA256 26daf450814a6f339001173abdb07aa9c0bfae6a5432db67bf6a73c19c9fdd5e SHA512 ca4d25c74eed64bc9b55da9318306799b3e75973c401b896f459cff741fd1d17ff769317bc0623eea8e78ee557ba6e62282da5b3beeca68222d531ad845b6aa9 WHIRLPOOL 80c8b8a3838c70e2e69adec256db99d31f17242225053a4459cd254ebd1a4dd366831de6207a1770274431e2b3bab164efd113a3d39a0929436ce255a65f896b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlCsVT4ACgkQVWmRsqeSphOCvQCfSLtRT8GWWtlYxtqzh29SHNRW
+DL8Ani/gVhRvPssG/1jvfux+hOOc1Q4V
+=MMtB
+-----END PGP SIGNATURE-----
